--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
           <a id="forkme_banner" href="https://github.com/nesfit">View on GitHub</a>
 
           <h1 id="project_title">Networked and Embedded Systems Research Group</h1>
-          <h2 id="project_tagline">Web sites for nesfit group.</h2>
+          <h2 id="project_tagline">Research in network communication, architecture and monitoring, design of simulation and verification tools, network security and digital forensics.  </h2>
 
         </header>
     </div>
