--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <div id="header_wrap" class="outer">
         <header class="inner">
           <a id="forkme_banner" href="https://github.com/nesfit">View on GitHub</a>
-
+          <img src="images/nesfit-color-inv.png"/>
           <h1 id="project_title">Networked and Embedded Systems Research Group</h1>
           <h2 id="project_tagline">Research in network communication, architecture and monitoring, design of simulation and verification tools, network security and digital forensics.  </h2>
 
