--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
     <!-- FOOTER  -->
     <div id="footer_wrap" class="outer">
       <footer class="inner">
-        <p>Published with <a href="https://pages.github.com">GitHub Pages</a></p>
+        <p>| © 2016, nes●fit | Published with GitHub Pages. | </p>
       </footer>
     </div>
 
