--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
     <!-- FOOTER  -->
     <div id="footer_wrap" class="outer">
       <footer class="inner">
-        <p>| © 2016 nes●fit | Published with GitHub Pages. | </p>
+        <p>| © 2016 nes●fit | <a id="forkme_banner" href="https://github.com/nesfit">nesfit on GitHub</a> | </p>
       </footer>
     </div>
 
