--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <div id="main_content_wrap" class="outer">
       <section id="main_content" class="inner">
         
-<p>Focus of NES@FIT research group is on communication, architecture and monitoring of computer networks, design of simulation and verification tools, network security and digital forensics.     </p>
+<p>Focus of nes●fit research group is on communication, architecture and monitoring of computer networks, design of simulation and verification tools, network security and digital forensics.     </p>
         <h2>Research interests</h2>
         <ul>
           <li>Design, specification and analysis of computer communication</li>
